--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
   "dependencies": {
     "gatsby": "^2.24.50",
     "gatsby-cli": "^2.12.91",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-typography": "^2.5.10",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "2.1.0"
