--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "emailjs-com": "^2.6.3",
     "gatsby": "^2.24.50",
     "gatsby-cli": "^2.12.91",
     "gatsby-plugin-react-helmet": "^3.3.10",
