--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-sharp": "^2.6.31",
     "gatsby-plugin-typography": "^2.5.10",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
